--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Practicando</title>
 </head>
 <body>
+<h1>Practicando con Branching</h1>
+<form action="">
+<section>NOTICIAS</section>
+<section>VIDEOS</section>
+</form>
 
 </body>
 </html>
