--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <form action="">
 <section>NOTICIAS</section>
 <section>VIDEOS</section>
+<section><img src="perrito-elegante.jpg" alt=""></section>
 </form>
 
 </body>
